2011-03-21  Chang Shu  <cshu@webkit.org>

        Reviewed by Alexey Proskuryakov.

        REGRESSION (r79953): Can't type in MS Outlook 2011
        https://bugs.webkit.org/show_bug.cgi?id=56665

        Restore the expected result before r79953. r79953 changed behavior slightly in function
        finishedLoadingWithDataSource in file mac/WebView/WebHTMLRepresentation.mm, where
        core(webFrame)->editor()->applyEditingStyleToBodyElement() was called but not before r79953
        or after this patch.

        * platform/mac/editing/selection/designmode-no-caret-expected.txt:

2011-03-21  Dominic Cooney  <dominicc@google.com>

        Reviewed by Jeremy Orlow.

        Adds a regression test for MediaQueryList listener callbacks in V8.
        https://bugs.webkit.org/show_bug.cgi?id=56166

        * fast/media/media-query-list-callback-expected.txt: Added.
        * fast/media/media-query-list-callback.html: Added.
        * fast/media/resources/media-query-list-callback-frame.html: Added.

2011-03-21  chris fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        platform/mac/accessibility/aria-table-with-colspan-cells.html is failing on the Leopard Release tester
        https://bugs.webkit.org/show_bug.cgi?id=56523

        List and table functionality is not present on Leopard and should be skipped.

        * platform/mac-leopard/Skipped:
        * platform/mac-leopard/platform/mac/accessibility: Removed.
        * platform/mac-leopard/platform/mac/accessibility/aria-table-with-colspan-cells-expected.txt: Removed.
        * platform/mac-leopard/platform/mac/accessibility/list-items-ignored-expected.txt: Removed.

2011-03-21  Adam Roben  <aroben@apple.com>

        Skip another asserting animations test

        <http://webkit.org/b/56488> tracks the failure

        * platform/mac/Skipped:
        * platform/win/Skipped:

2011-03-21  Vsevolod Vlasov  <vsevik@chromium.org>

        Reviewed by Pavel Feldman.
