@@ -29,13 +29,15 @@ function test()
 
     function step2()
     {
-        var resource1 = WebInspector.panels.network.resources[0];
+        // inspector-test.js appears in network panel occasionally in Safari on
+        // Mac, so checking two last resources.
+        var resourcesCount = WebInspector.panels.network.resources.length;
+        var resource1 = WebInspector.panels.network.resources[resourcesCount - 2];
         InspectorTest.addResult(resource1.url);
         InspectorTest.assertGreaterOrEqual(100, resource1.latency * 1000, "Latency of the first resource");
         InspectorTest.assertGreaterOrEqual(300, resource1.duration * 1000, "Duration of the first resource");
-        
 
-        var resource2 = WebInspector.panels.network.resources[1];
+        var resource2 = WebInspector.panels.network.resources[resourcesCount - 1];
         InspectorTest.addResult(resource2.url);
         InspectorTest.assertGreaterOrEqual(100, resource2.latency * 1000, "Latency of the second resource");
         InspectorTest.assertGreaterOrEqual(100, resource2.duration * 1000, "Duration of the second resource");
