@@ -1,3 +1,15 @@
+2011-03-21  Vsevolod Vlasov  <vsevik@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: http/tests/inspector/network tests sometimes fail on Leopard Intel Release (Tests) and SnowLeopard Intel Leaks
+        https://bugs.webkit.org/show_bug.cgi?id=56578
+
+        Fixed and re-enabled http/tests/inspector/network tests
+
+        * http/tests/inspector/network/network-size.html: Renamed from LayoutTests/http/tests/inspector/network/network-size.html-disabled.
+        * http/tests/inspector/network/network-timing.html: Renamed from LayoutTests/http/tests/inspector/network/network-timing.html-disabled.
+
 2011-03-21  Chang Shu  <cshu@webkit.org>
 
         Reviewed by Alexey Proskuryakov.
